--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Lists#index</h1>
-<p>Find me in app/views/lists/index.html.erb</p>
+<h1>投稿一覧</h1>
+
+<% @lists.each do |list| %>
+<!--Listレコードの数だけ繰り返し処理を行いlist変数に格納-->
+    <p>タイトル</p>
+    <span><%= list.title %></span>
+
+<% end %>
