--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -3,6 +3,8 @@
 <% @lists.each do |list| %>
 <!--Listレコードの数だけ繰り返し処理を行いlist変数に格納-->
     <p>タイトル</p>
-    <span><%= list.title %></span>
+    <span>
+        <%= link_to list.title, "/lists/#{list.id}" %>
+    </span>
 
 <% end %>
