--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -4,7 +4,15 @@
 <!--Listレコードの数だけ繰り返し処理を行いlist変数に格納-->
     <p>タイトル</p>
     <span>
-        <%= link_to list.title, "/lists/#{list.id}" %>
+        <%= link_to list.title, list_path(list.id) %>
     </span>
+    
+    <p>画像</p>
+    <% if list.image.attached? %>
+    <!--attached?は画像が存在すればTrue,なければFalseを返す-->
+        <%= image_tag list.image, size: "200x200" %>
+    <% else %>
+        <%= image_tag 'no_image', size: "200x200" %>
+    <% end %>
 
 <% end %>
