--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -7,5 +7,9 @@
     <h4>本文</h4>
     <%= f.text_area :body %>
     
+    <h4>画像</h4>
+    <%= f.file_field :image, accept: "image/*" %>
+    <!--ファイル全般を投稿できてしまうため image/*で画像のみに制限-->
+    
     <%= f.submit '投稿' %>
 <% end %>
